Backport to Java 8
The sun sets on Java 11 world.
Building still requires Java 11 and publishing Java 17 given that I cannot
be bothered with migrating the javadocs to Java 8.